Provide More Job and Contract Slack Alerts (#786)
* provide already existing alerts in production to slack

* remove unused import